@@ -1,3 +1,4 @@
+	* fix bug where dont_count_slow_torrents could not be disabled
 	* fix fallocate hack on linux (fixes corruption on some architectures)
 	* fix auto-manage bug with announce to tracker/lsd/dht limits
 	* improve DHT routing table to not create an unbalanced tree
